# enum_switch

./: .pre-commit-config.yaml  README.md  pyproject.toml
enum_switch/: __init__.py
tests/: test_switch.py
